--- a/6_性能考虑.md
+++ b/6_性能考虑.md
@@ -127,3 +127,160 @@ CUDA 设备的全局内存是使用 DRAM 实现的。数据位被存储在 DRAM 
 第4和第5行显示了内核执行第1阶段加载的M元素。我们看到这些访问现在进行到通道1和通道3的储存体。再次强调，这些访问将并行进行。读者应该清楚，并行线程执行和DRAM系统的并行结构之间存在共生关系。一方面，充分利用DRAM系统潜在访问带宽需要许多线程同时访问DRAM中的数据。另一方面，设备的执行吞吐量依赖于DRAM系统并行结构的良好利用，即储存体和通道。例如，如果同时执行的线程都访问同一通道中的数据，内存访问吞吐量和整体设备执行速度将大大降低。
 
 我们邀请读者验证用相同的2*2线程块配置来相乘两个较大的矩阵（如8*8）将利用图6.9中的所有四个通道。另一方面，增加的DRAM突发大小需要更大的矩阵乘法来充分利用所有通道的数据传输带宽。
+
+## 6.3 线程粗化
+
+到目前为止，在我们所看到的所有内核中，工作都是在最细的粒度上进行线程并行化的。也就是说，每个线程被分配了最小的工作单元。例如，在向量加法内核中，每个线程被分配了一个输出元素。在RGB到灰度转换和图像模糊内核中，每个线程被分配了输出图像中的一个像素。在矩阵乘法内核中，每个线程被分配了输出矩阵中的一个元素。
+
+以最细粒度在线程间并行化工作的优势在于，它增强了透明的可扩展性，如第4章《计算架构和调度》中所讨论的。如果硬件有足够的资源来并行执行所有工作，那么应用程序就暴露了足够的并行性来充分利用硬件。否则，如果硬件没有足够的资源来并行执行所有工作，硬件可以通过一个接一个地执行线程块来串行化工作。
+
+以最细粒度并行化工作的缺点在于，当并行化工作需要付出“代价”时，这种代价可能有多种形式，例如不同线程块对数据的冗余加载、冗余工作、同步开销等。当线程被硬件并行执行时，这种并行代价往往是值得付出的。然而，如果由于资源不足而导致硬件串行化工作，那么这种代价就是不必要的。在这种情况下，程序员最好部分串行化工作，减少并行的代价。这可以通过为每个线程分配多个工作单元来实现，这通常被称为线程粗化。
+
+我们通过第5章《内存架构和数据局部性》中的瓦片矩阵乘法示例来演示线程粗化优化。图6.12展示了计算输出矩阵`P`的两个水平相邻输出瓦片的内存访问模式。对于每个这些输出瓦片，我们观察到需要加载矩阵`N`的不同输入瓦片。然而，对于两个输出瓦片，矩阵`M`的相同输入瓦片被加载。
+
+![image](https://github.com/user-attachments/assets/93c8ebd6-f2ad-49a0-aaf2-81eca59e6830)
+> 图6.12 瓦片矩阵乘法的线程粗化。
+
+在第5章《内存架构和数据局部性》的瓦片实现中，每个输出瓦片由不同的线程块处理。由于共享内存内容不能在块间共享，每个块必须加载自己的一份矩阵M的输入瓦片。尽管让不同的线程块加载相同的输入瓦片是冗余的，但这是我们为了能够使用不同的块并行处理两个输出瓦片而付出的代价。如果这些线程块并行运行，这个代价可能是值得的。另一方面，如果这些线程块被硬件串行化，这个代价就白白付出了。在后一种情况下，程序员最好让一个线程块处理两个输出瓦片，这样块中的每个线程处理两个输出元素。这样，粗化的线程块将只需加载一次矩阵M的输入瓦片，并将其用于多个输出瓦片。
+
+图6.13展示了如何将线程粗化应用到第5章《内存架构和数据局部性》的瓦片矩阵乘法代码中。在第02行添加了一个常量`COARSE_FACTOR`来表示粗化因子，即每个粗化线程将负责的原始工作单元数量。在第13行中，列索引的初始化被替换为`colStart`的初始化，`colStart`是线程负责的第一列的索引，因为线程现在负责多个具有不同列索引的元素。在计算`colStart`时，块索引bx被乘以`TILE_WIDTH*COARSE_FACTOR`，而不是仅仅是TILE_WIDTH，因为每个线程块现在负责`TILE_WIDTH*COARSE_FACTOR`列。在第16-19行中，声明并初始化了多个`Pvalue`实例，每个实例对应一个粗化线程负责的元素。在第17行的循环中，迭代了粗化线程负责的不同工作单元，这个循环有时被称为粗化循环。在第22行的循环中，只加载了矩阵M的一个瓦片，每次循环迭代时与原始代码相同。然而，对于每个加载的矩阵M的瓦片，粗化循环在第27行加载并使用了多个矩阵N的瓦片。这个循环首先确定粗化线程负责的当前瓦片的列（第29行），然后加载矩阵N的瓦片（第32行）并使用该瓦片计算并更新不同的`Pvalue`（第35-37行）。最后，在第44-47行，另一个粗化循环用于每个粗化线程来更新其负责的输出元素。
+
+```cuda
+#define TILE_WIDTH    32
+#define COARSE_FACTOR 4
+__global__ void matrixMulKernel(float* M, float* N, float* P, int width){
+    __shared__ float Mds[TILE_WIDTH][TILE_WIDTH];
+    __shared__ float Nds[TILE_WIDTH][TILE_WIDTH];
+
+    int bx = blockIdx.x; int by = blockIdx.y;
+    int tx = threadIdx.x; int ty = threadIdx.y;
+
+    // 确定要处理的P元素的行和列
+    int row = by*TILE_WIDTH + ty;
+    int colStart = bx*TILE_WIDTH*COARSE_FACTOR + tx;
+
+    // 为所有输出元素初始化Pvalue
+    float Pvalue[COARSE_FACTOR];
+    for(int c = 0; c < COARSE_FACTOR; ++c){
+        Pvalue[c] = 0.0f;
+    }
+
+    // 循环遍历计算P元素所需的M和N瓦片
+    for(int ph = 0; ph < width/TILE_WIDTH; ++ph){
+
+        // 协同加载M瓦片到共享内存
+        Mds[ty][tx] = M[row*width + ph*TILE_WIDTH + tx];
+
+        for(int c = 0; c < COARSE_FACTOR; ++c){
+
+          int col = colStart + c*TILE_WIDTH;
+
+          // 协同加载N瓦片到共享内存
+          Nds[ty][tx] = N[(ph*TILE_WIDTH + ty)*width + col];
+          __syncthreads();
+
+          for(int k = 0; k < TILE_WIDTH; ++k){
+              Pvalue[c] += Mds[ty][k]*Nds[k][tx];
+          }
+          __syncthreads();
+        }
+    }
+
+    for(int c = 0; c < COARSE_FACTOR; ++c){
+        int col = colStart + c*TILE_WIDTH;
+        P[row*width + col] = Pvalue[c];
+    }
+
+}
+```
+> 图6.13 瓦片矩阵乘法的线程粗化代码。
+
+线程粗化是一种强大的优化技术，可以显著提高许多应用的性能。这是一种常见的优化方法。然而，在应用线程粗化时需要避免几个陷阱。首先，必须小心在不必要的时候不要应用此优化。回顾一下，线程粗化在并行化的代价可以通过粗化来减少时是有益的，例如冗余的数据加载、冗余工作、同步开销等。并不是所有计算都有这样的代价。例如，在第2章《异构数据并行计算》的向量加法内核中，处理不同向量元素并行并不会付出代价。因此，将线程粗化应用于向量加法内核不会显著改变性能。同样适用于第3章《多维网格和数据》的RGB到灰度转换内核。
+
+第二个要避免的陷阱是不要应用过多的粗化，以至于硬件资源变得未被充分利用。回顾一下，向硬件暴露尽可能多的并行性可以实现透明的可扩展性。这为硬件提供了根据其执行资源的多少来并行化或串行化工作的灵活性。当程序员粗化线程时，他们减少了向硬件暴露的并行性。如果粗化因子过高，将不会向硬件暴露足够的并行性，导致一些并行执行资源未被利用。实际上，不同的设备有不同的执行资源，因此最佳粗化因子通常是特定于设备和数据集的，并需要针对不同的设备和数据集进行重新调整。因此，当应用线程粗化时，可扩展性变得不那么透明。
+
+应用线程粗化的第三个陷阱是避免增加资源消耗到损害占用率的程度。根据内核的不同，线程粗化可能需要每个线程使用更多的寄存器或每个线程块使用更多的共享内存。如果是这种情况，程序员必须小心不要使用过多的寄存器或共享内存，以至于占用率降低。减少占用率所带来的性能损失可能比线程粗化所提供的性能提升更为严重。
+
+## 6.4 优化清单
+
+在本书的第一部分中，我们已经涵盖了各种常见的优化技术。我们将这些优化整合成一个清单，如表 6.1 所示。这个清单不是详尽无遗的，但包含了许多普遍适用的优化，程序员应首先考虑。在本书的第二部分和第三部分，我们将把这个清单中的优化应用于各种并行模式和应用，以理解它们在不同上下文中的作用。在本节中，我们将简要回顾每种优化及其应用策略。
+
+|优化|对计算核心的好处|对内存的好处|策略|
+|:-|:-|:-|:-|
+|最大化占用率|更多的工作来隐藏流水线延迟|更多的并行内存访问来隐藏 DRAM 延迟|调整 SM 资源的使用，如每块线程数、每块共享内存和每个线程的寄存器|
+|启用合并的全局内存访问|减少等待全局内存访问的流水线停顿|减少全局内存流量，更好地利用突发/缓存行|以合并的方式在全局内存和共享内存之间传输，执行共享内存中的未合并访问（例如角转）;重新排列线程到数据的映射;重新排列数据的布局|
+|最小化控制分歧|提高 SIMD 效率（在 SIMD 执行期间更少的空闲核心）|...|重新安排线程到工作的映射和/或数据;重新安排数据的布局|
+|数据的块状重用|减少等待全局内存访问的流水线停顿|减少全局内存流量|将块内重复使用的数据放置在共享内存或寄存器中，以便仅在全局内存和 SM 之间传输一次|
+|私有化（稍后介绍）|减少等待原子更新的流水线停顿|减少原子更新的争用和序列化|对数据的私有副本进行部分更新，然后在完成时更新通用副本|
+|线程粗化|减少冗余工作、分歧或同步|减少冗余全局内存流量|为每个线程分配多个并行单元，以减少并行化的成本（如果硬件原本会序列化线程）|
+
+表 6.1 优化清单
+
+表 6.1 中的第一个优化是最大化 SM 上线程的占用率。这种优化在第 4 章《计算架构与调度》中引入，强调了拥有比核心更多的线程对于隐藏核心流水线中的长延迟操作的重要性。为了最大化占用率，程序员可以调整内核的资源使用，以确保最大数量的块或寄存器不会限制同时分配给 SM 的线程数量。在第 5 章《内存架构与数据局部性》中，引入了共享内存作为另一个需要仔细调整的资源，以免限制占用率。在本章中，最大化占用率的重要性被讨论为隐藏内存延迟的手段，而不仅仅是核心流水线延迟。拥有足够多的线程同时执行，确保生成足够的内存访问，以充分利用内存带宽。
+
+表 6.1 中的第二个优化是使用合并的全局内存访问，通过确保同一 warp 中的线程访问相邻的内存位置。这种优化在本章中介绍，强调了硬件将对相邻内存位置的访问合并为单个内存请求的能力，从而减少全局内存流量并提高 DRAM 突发的利用率。到目前为止，我们在本书中看到的内核自然地展现了合并的访问模式。然而，我们将在本书的第二部分和第三部分中看到许多例子，其中内存访问模式更为不规则，因此需要更多的努力来实现合并。
+
+实现合并的策略包括在全局内存到共享内存的传输中采用合并的方式，然后在共享内存中执行不规则访问。我们已经在本章中看到这种策略的一个例子，即角转。在第 12 章《合并》中，我们将看到另一个例子。在这个模式中，同一个块中的线程需要在相同数组中执行二分查找，因此它们协作以合并的方式将数组从全局内存加载到共享内存，然后每个线程在共享内存中执行二分查找。在第 13 章《排序》中，我们将看到该策略的另一个例子。在这个模式中，线程以分散的方式将结果写入数组，因此它们可以协作在共享内存中执行分散的访问，然后将结果从共享内存写回到全局内存，以便元素具有相邻的目标位置时启用更多的合并。
+
+另一种实现合并的策略是重新排列线程到数据元素的映射。我们将在第 10 章《减少和最小化分歧》中看到这种策略的一个例子，在这个模式中，我们将讨论减少模式。另一种策略是重新排列数据的布局。我们将在第 14 章《稀疏矩阵计算》中看到这种策略的一个例子，特别是在讨论 ELL 和 JDS 格式时。
+
+表 6.1 中的第三个优化是最小化控制分歧。控制分歧在第 4 章《计算架构与调度》中介绍，强调了确保同一 warp 中的线程执行相同控制路径的重要性，以确保在 SIMD 执行期间所有核心都被有效利用。到目前为止，我们在本书中看到的内核没有表现出控制分歧，除了在边界条件下不可避免的分歧。然而，我们将在本书的第二部分和第三部分中看到许多例子，其中控制分歧可能对性能造成重大损害。
+
+最小化控制分歧的策略包括重新安排工作和/或数据的分布，以确保一个 warp 中的线程都在使用之前再使用其他 warp 的线程。在第 10 章《减少和最小化分歧》中，我们将看到这种策略的一个例子。在第 11 章《前缀和（扫描）》中，我们将看到这种策略的另一个例子。通过重新安排工作和/或数据的分布，也可以确保同一 warp 中的线程具有类似的工作负载。我们将在第 15 章《图遍历》中看到这种策略的一个例子，在讨论 vertex-centric 和 edge-centric 并行化方案的权衡时。另一种最小化控制分歧的策略是重新排列数据的布局，以确保处理相邻数据的线程在同一 warp 中具有类似的工作负载。我们将在第 14 章《稀疏矩阵计算》中看到这种策略的一个例子，特别是在讨论 JDS 格式时。
+
+表 6.1 中的第四个优化是块状数据重用，将块内重复使用的数据放置在共享内存或寄存器中，以便仅在全局内存和 SM 之间传输一次。块状优化在第 5 章《内存架构与数据局部性》中引入，以矩阵乘法为例，其中处理同一输出块的线程协作加载相应的输入块到共享内存中，然后重复访问这些输入块。在本书的第二部分和第三部分中，我们将看到这一优化的应用。我们将观察到当输入和输出块具有不同尺寸时应用块状优化的挑战。这一挑战在第 7 章《卷积》和第 8 章《模板》中出现。我们还将观察到，数据的块状存储不仅可以在共享内存中进行，还可以在寄存器中进行。这一观察在第 8 章《模板》中最为明显。我们还将观察到，块状优化适用于重复访问的输出数据，而不仅仅是输入数据。
+
+表 6.1 中的第五个优化是私有化。这种优化尚未介绍，但我们在此提及以求完整。私有化涉及到多个线程或块需要更新通用输出的情况。为了避免同时更新相同数据的开销，可以创建数据的私有副本并进行部分更新，然后在完成时从私有副本更新通用副本。我们将在第 9 章《并行直方图》中看到这种优化的一个例子，其中多个线程需要更新相同的直方图计数器。在第 15 章《图遍历》中，我们也将看到这种优化的一个例子，其中多个线程需要向同一个队列添加条目。
+
+表 6.1 中的第六个优化是线程粗化，其中将多个并行单元分配给一个线程，以减少并行化的成本（如果硬件原本会序列化线程）。线程粗化在本章中介绍，以块状矩阵乘法为例，其中并行化的成本是多个线程块重复加载相同的输入块。通过为多个相邻的输出块分配一个线程块，可以仅加载一次输入块。我们将在本书的第二部分和第三部分中看到线程粗化在不同上下文中的应用，每次都有不同的并行
+
+化成本。在第 8 章《模板》中，线程粗化有助于减少与私有化优化相关的需要提交的私有副本数量。在第 10 章《减少和最小化分歧》中，以及第 11 章《前缀和（扫描）》中，线程粗化也有助于减少并行算法相对于顺序算法所执行的冗余工作。在第 12 章《合并》中，线程粗化减少了识别每个线程的输入段所需的二分查找操作数量。在第 13 章《排序》中，线程粗化有助于提高内存的合并效率。
+
+再次强调，表 6.1 中的清单并非详尽无遗，但包含了不同计算模式中常见的主要优化类型。这些优化在本书第二部分和第三部分的多个章节中出现。我们还将看到其他特定章节中出现的优化。例如，在第 7 章《卷积》中，我们将介绍常量内存的使用。在第 10 章《减少和最小化分歧》中，我们将介绍双缓冲优化。
+
+
+## 6.5 了解计算的瓶颈
+
+在决定对特定计算应用哪种优化时，首先了解限制该计算性能的资源是很重要的。限制计算性能的资源通常被称为性能瓶颈。优化通常通过增加一种资源的使用量来减轻对另一种资源的压力。如果应用的优化没有针对瓶颈资源，可能不会从中受益。更糟糕的是，优化尝试可能会实际降低性能。
+
+例如，共享内存的块状优化增加了共享内存的使用，以减少对全局内存带宽的压力。当瓶颈资源是全局内存带宽且正在加载的数据被重用时，这种优化效果很好。然而，如果性能被占用率限制，而占用率又受到已经使用过多共享内存的限制，那么应用共享内存的块状优化可能会使情况更糟。
+
+为了了解限制计算性能的资源，GPU 计算平台通常提供各种分析工具。我们建议读者参考 CUDA 文档，以获取有关如何使用分析工具来识别计算的性能瓶颈的更多信息（NVIDIA，Profiler）。性能瓶颈可能是硬件特定的，这意味着相同的计算在不同设备上可能会遇到不同的瓶颈。因此，识别性能瓶颈和应用性能优化的过程需要对 GPU 架构以及不同 GPU 设备之间的架构差异有良好的理解。
+
+## 6.6 总结
+
+在本章中，我们涵盖了 GPU 的离芯内存（DRAM）架构，并讨论了相关的性能考虑因素，如全局内存访问合并和通过内存并行性隐藏内存延迟。然后，我们介绍了一个重要的优化：线程粒度粗化。通过本章和之前章节提供的见解，读者应该能够对他们遇到的任何内核代码的性能进行推理。我们通过呈现广泛用于优化许多计算的常见性能优化清单来结束本部分。我们将在本书的接下来的两部分中继续研究这些优化在并行计算模式和应用案例研究中的实际应用。
+
+## 练习
+
+1. 编写一个矩阵乘法内核函数，与图 6.4 中的设计相对应。
+2. 对于块状矩阵乘法，在可能的 `BLOCK_SIZE` 范围内，对于哪些 `BLOCK_SIZE` 值，内核将完全避免对全局内存的未合并访问？（只考虑正方块）
+3. 考虑以下 CUDA 内核：
+```cuda
+__global__ void foo_kernel(float* a, float* b, float* c, float* d, float* e){
+    unsigned int i = blockIdx.x*blockDim.x + threadIdx.x;
+    __shared__ float a_s[256];
+    __shared__ float bc_s[4*256];
+    a_s[threadIdx.x] = a[i];
+    for(unsigned int j = 0; j < 4; ++j){
+        bc_s[j*256 + threadIdx.x] = b[j*blockDim.x*gridDim.x + i] + c[i*4 + j];
+    }
+    __syncthreads();
+    d[i + 8] = a_s[threadIdx.x];
+    e[i*8] = bc_s[threadIdx.x*4];
+}
+```
+对于以下每个内存访问，指定它们是合并的还是未合并的，或者合并不适用：
+a. 第 05 行对数组 `a` 的访问
+b. 第 05 行对数组 `a_s` 的访问
+c. 第 07 行对数组 `b` 的访问
+d. 第 07 行对数组 `c` 的访问
+e. 第 07 行对数组 `bc_s` 的访问
+f. 第 10 行对数组 `a_s` 的访问
+g. 第 10 行对数组 `d` 的访问
+h. 第 11 行对数组 `bc_s` 的访问
+i. 第 11 行对数组 `e` 的访问
+4. 对于以下矩阵乘法内核，每个内核的浮点到全局内存访问的比率（以 OP/B 为单位）是多少？
+a. 第 3 章《多维网格与数据》中描述的简单内核，没有应用任何优化。
+b. 第 5 章《内存架构与数据局部性》中描述的内核，应用了共享内存块状优化，块大小为 32*32。
+c. 本章中描述的内核，应用了共享内存块状优化，块大小为 32*32，并且应用了线程粗化，粗化因子为 4。
