--- a/6_性能考虑.md
+++ b/6_性能考虑.md
@@ -1,18 +1,21 @@
 # 6_性能考虑
 
-* [6.1 内存合并]
-* [6.2 隐藏内存延迟]
-* [6.3 线程粗化]
-* [6.4 优化检查清单]
-* [6.5 了解计算瓶颈]
-* [6.6 总结]
-* [练习]
+* [6.1 内存合并](https://github.com/tunglinwood/CUDA/blob/main/6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91.md#61-%E5%86%85%E5%AD%98%E5%90%88%E5%B9%B6)
+* [6.2 隐藏内存延迟](https://github.com/tunglinwood/CUDA/blob/main/6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91.md#62-%E9%9A%90%E8%97%8F%E5%86%85%E5%AD%98%E5%BB%B6%E8%BF%9F)
+* [6.3 线程粗化](https://github.com/tunglinwood/CUDA/blob/main/6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91.md#63-%E7%BA%BF%E7%A8%8B%E7%B2%97%E5%8C%96)
+* [6.4 优化检查清单](https://github.com/tunglinwood/CUDA/blob/main/6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91.md#64-%E4%BC%98%E5%8C%96%E6%B8%85%E5%8D%95)
+* [6.5 了解计算瓶颈](https://github.com/tunglinwood/CUDA/blob/main/6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91.md#65-%E4%BA%86%E8%A7%A3%E8%AE%A1%E7%AE%97%E7%9A%84%E7%93%B6%E9%A2%88)
+* [6.6 总结](https://github.com/tunglinwood/CUDA/blob/main/6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91.md#66-%E6%80%BB%E7%BB%93)
+* [练习](https://github.com/tunglinwood/CUDA/blob/main/6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91.md#%E7%BB%83%E4%B9%A0)
 
 并行程序的执行速度可能会因程序对资源的需求与硬件资源约束之间的相互作用而大相径庭。管理并行代码与硬件资源约束之间的相互作用对于在几乎所有并行编程模型中实现高性能至关重要。这是一项需要深入理解硬件架构的实践技能，最有效的学习方式是通过在为高性能设计的并行编程模型中进行实践练习。
 
 到目前为止，我们已经了解了 GPU 架构的各个方面及其对性能的影响。在第 4 章《计算架构与调度》中，我们学习了 GPU 的计算架构及相关性能考虑因素，如控制分歧和占用率。在第 5 章《内存架构与数据局部性》中，我们了解了 GPU 的片上内存架构以及使用共享内存瓦片来实现更多数据重用的方法。在本章中，我们将简要介绍片外内存（DRAM）架构，并讨论相关的性能考虑因素，如内存合并和内存延迟隐藏。随后，我们将讨论一种重要的优化类型——线程粗化——这种优化可能针对架构的不同方面，具体取决于应用场景。最后，我们将用一份常见性能优化的检查清单来总结本部分内容，这将作为优化书中第二和第三部分讨论的并行模式性能的指南。
 
 在不同的应用中，不同的架构约束可能主导性能，并成为性能的限制因素，通常被称为瓶颈。通过将一种资源的使用权衡为另一种资源的使用，通常可以显著改善在特定 CUDA 设备上的应用性能。如果缓解的资源约束在策略应用前是主要约束，而加重的资源约束对并行执行没有负面影响，那么这种策略效果很好。如果没有这样的理解，性能调优将变成猜测；可行的策略可能会导致性能提升，也可能不会。
+
+|[top](https://github.com/tunglinwood/CUDA/blob/main/6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91.md#6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91)|
+|-|
 
 ## 6.1 内存合并
 
@@ -77,6 +80,9 @@ CUDA 设备的全局内存是使用 DRAM 实现的。数据位被存储在 DRAM 
 
 内存合并与拼车安排非常相似。我们可以将数据视为通勤者，将 DRAM 访问请求视为车辆。当 DRAM 请求的速率超过 DRAM 系统提供的访问带宽时，交通拥堵会增加，算术单元会变得空闲。如果多个线程访问相同的 DRAM 位置的数据，它们可能会形成一个“拼车”并将它们的访问合并为一个 DRAM 请求。然而，这需要线程具有类似的执行时间表，以便它们的数据访问可以合并成一个请求。在同一个 warp 中的线程是完美的候选者，因为它们都以 SIMD 执行方式同时执行加载指令。
 
+|[top](https://github.com/tunglinwood/CUDA/blob/main/6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91.md#6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91)|
+|-|
+
 ## 6.2 隐藏内存延迟
 正如我们在第6.1节所解释的，DRAM突发传输是一种并行组织形式：在DRAM核心阵列中，多个位置被并行访问。然而，单靠突发传输不足以实现现代处理器所需的DRAM访问带宽。DRAM系统通常采用另外两种并行组织形式：储存体和通道。在最高层次上，一个处理器包含一个或多个通道。每个通道都是一个带有总线的内存控制器，该总线将一组DRAM储存体连接到处理器。图6.7展示了一个包含四个通道的处理器，每个通道通过总线将四个DRAM储存体连接到处理器。在实际系统中，处理器通常有一到八个通道，并且每个通道连接大量的储存体。
 
@@ -127,6 +133,9 @@ CUDA 设备的全局内存是使用 DRAM 实现的。数据位被存储在 DRAM 
 第4和第5行显示了内核执行第1阶段加载的M元素。我们看到这些访问现在进行到通道1和通道3的储存体。再次强调，这些访问将并行进行。读者应该清楚，并行线程执行和DRAM系统的并行结构之间存在共生关系。一方面，充分利用DRAM系统潜在访问带宽需要许多线程同时访问DRAM中的数据。另一方面，设备的执行吞吐量依赖于DRAM系统并行结构的良好利用，即储存体和通道。例如，如果同时执行的线程都访问同一通道中的数据，内存访问吞吐量和整体设备执行速度将大大降低。
 
 我们邀请读者验证用相同的2*2线程块配置来相乘两个较大的矩阵（如8*8）将利用图6.9中的所有四个通道。另一方面，增加的DRAM突发大小需要更大的矩阵乘法来充分利用所有通道的数据传输带宽。
+
+|[top](https://github.com/tunglinwood/CUDA/blob/main/6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91.md#6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91)|
+|-|
 
 ## 6.3 线程粗化
 
@@ -201,6 +210,9 @@ __global__ void matrixMulKernel(float* M, float* N, float* P, int width){
 
 应用线程粗化的第三个陷阱是避免增加资源消耗到损害占用率的程度。根据内核的不同，线程粗化可能需要每个线程使用更多的寄存器或每个线程块使用更多的共享内存。如果是这种情况，程序员必须小心不要使用过多的寄存器或共享内存，以至于占用率降低。减少占用率所带来的性能损失可能比线程粗化所提供的性能提升更为严重。
 
+|[top](https://github.com/tunglinwood/CUDA/blob/main/6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91.md#6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91)|
+|-|
+
 ## 6.4 优化清单
 
 在本书的第一部分中，我们已经涵盖了各种常见的优化技术。我们将这些优化整合成一个清单，如表 6.1 所示。这个清单不是详尽无遗的，但包含了许多普遍适用的优化，程序员应首先考虑。在本书的第二部分和第三部分，我们将把这个清单中的优化应用于各种并行模式和应用，以理解它们在不同上下文中的作用。在本节中，我们将简要回顾每种优化及其应用策略。
@@ -238,6 +250,8 @@ __global__ void matrixMulKernel(float* M, float* N, float* P, int width){
 
 再次强调，表 6.1 中的清单并非详尽无遗，但包含了不同计算模式中常见的主要优化类型。这些优化在本书第二部分和第三部分的多个章节中出现。我们还将看到其他特定章节中出现的优化。例如，在第 7 章《卷积》中，我们将介绍常量内存的使用。在第 10 章《减少和最小化分歧》中，我们将介绍双缓冲优化。
 
+|[top](https://github.com/tunglinwood/CUDA/blob/main/6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91.md#6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91)|
+|-|
 
 ## 6.5 了解计算的瓶颈
 
@@ -246,6 +260,9 @@ __global__ void matrixMulKernel(float* M, float* N, float* P, int width){
 例如，共享内存的块状优化增加了共享内存的使用，以减少对全局内存带宽的压力。当瓶颈资源是全局内存带宽且正在加载的数据被重用时，这种优化效果很好。然而，如果性能被占用率限制，而占用率又受到已经使用过多共享内存的限制，那么应用共享内存的块状优化可能会使情况更糟。
 
 为了了解限制计算性能的资源，GPU 计算平台通常提供各种分析工具。我们建议读者参考 CUDA 文档，以获取有关如何使用分析工具来识别计算的性能瓶颈的更多信息（NVIDIA，Profiler）。性能瓶颈可能是硬件特定的，这意味着相同的计算在不同设备上可能会遇到不同的瓶颈。因此，识别性能瓶颈和应用性能优化的过程需要对 GPU 架构以及不同 GPU 设备之间的架构差异有良好的理解。
+
+|[top](https://github.com/tunglinwood/CUDA/blob/main/6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91.md#6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91)|
+|-|
 
 ## 6.6 总结
 
@@ -284,3 +301,6 @@ i. 第 11 行对数组 `e` 的访问
 a. 第 3 章《多维网格与数据》中描述的简单内核，没有应用任何优化。
 b. 第 5 章《内存架构与数据局部性》中描述的内核，应用了共享内存块状优化，块大小为 32*32。
 c. 本章中描述的内核，应用了共享内存块状优化，块大小为 32*32，并且应用了线程粗化，粗化因子为 4。
+
+|[top](https://github.com/tunglinwood/CUDA/blob/main/6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91.md#6_%E6%80%A7%E8%83%BD%E8%80%83%E8%99%91)|
+|-|
