--- a/7_常量内存和缓存介绍.md
+++ b/7_常量内存和缓存介绍.md
@@ -1,1 +1,185 @@
+# 7_常量内存和缓存介绍
+
+* [7.1 背景] 
+* [7.2 并行卷积：基本算法] 
+* [7.3 常量内存和缓存] 
+* [7.4 带有边界单元的块状卷积] 
+* [7.5 使用缓存的带有边界单元的块状卷积] 
+* [7.6 总结] 
+* [练习] 
+
+在接下来的几章中，我们将讨论一组重要的并行计算模式。这些模式是广泛并行算法的基础，这些算法出现在许多并行应用中。我们将从卷积开始，这是一个流行的数组操作，在信号处理、数字录音、图像处理、视频处理和计算机视觉中以多种形式使用。在这些应用领域中，卷积通常作为一种滤波器来变换信号和像素，使其变得更加理想。我们的图像模糊内核就是这样一个滤波器，用于平滑信号值，以便可以看到整体趋势。例如，高斯滤波器是一种卷积滤波器，可以用来锐化图像中物体的边界和边缘。
+
+卷积通常执行大量的算术操作以生成每个输出元素。对于像高清图像和视频这样的大数据集，其中有许多输出元素（像素），计算量可能非常庞大。一方面，卷积的每个输出数据元素可以相互独立计算，这是并行计算的一个理想特征。另一方面，在处理不同的输出数据元素时，存在大量的输入数据共享，以及具有一定挑战性的边界条件。这使得卷积成为复杂块状方法和输入数据分阶段处理方法的重要用例，这些方法是本章的重点。
+
+## 7.1 背景
+
+卷积是一种数组操作，其中每个输出数据元素是对应输入元素和一组以其为中心的输入元素的加权和。加权和计算中使用的权重由一个滤波器数组定义，通常称为卷积核。由于CUDA内核函数和卷积核之间有一个不幸的名称冲突，我们将这些滤波器数组称为卷积滤波器，以避免混淆。
+
+卷积可以在不同维度的输入数据上执行：一维（1D）（例如，音频）、二维（2D）（例如，照片）、三维（3D）（例如，视频）等。在音频数字信号处理领域，输入的一维数组元素是随时间采样的信号音量。也就是说，输入数据元素 x<sub>i</sub> 是音频信号音量的第 i 个样本。1D 数据上的卷积，称为 1D 卷积，在数学上定义为一个函数，该函数接受一个包含 n 个元素的输入数据数组 [x<sub>0</sub>, x<sub>1</sub>, ..., x<sub>n-1</sub>] 和一个包含 2r + 1 个元素的滤波器数组 [f<sub>0</sub>, f<sub>1</sub>, ..., f<sub>2r</sub>]，并返回一个输出数据数组 y：
+
+$$ y_{i} = \sum^{r}_{j=-r} f_{j} * x_{i+j} $$
+
+由于滤波器的大小是一个奇数（2r+1），加权和计算在被计算的元素周围是对称的。也就是说，加权和涉及到计算位置两侧的 r 个输入元素，这就是为什么 r 被称为滤波器的半径的原因。
+
+图 7.1 显示了一个 1D 卷积示例，其中一个五元素（r = 2）的卷积滤波器 f 应用于一个七元素的输入数组 x。我们将遵循 C 语言的约定，其中 x 和 y 元素的索引从 0 到 6，f 元素的索引从 0 到 4。由于滤波器半径为 2，每个输出元素是相应输入元素的加权和，左侧两个元素和右侧两个元素的加权和。
+
+![image](https://github.com/user-attachments/assets/061b93f4-3334-4f7d-af39-2a48e5db3e6c)
+> 图 7.1 1D 卷积示例，内部元素。
+
+例如，y[2] 的值是 x[0]（即 x[2 - 2]）到 x[4]（即 x[2 + 2]）的加权和。在这个示例中，我们随意假设 x 元素的值为 [8, 2, 5, 4, 1, 7, 3]。f 元素定义了权重，在这个示例中其值为 1、3、5、3、1。每个 f 元素都乘以相应的 x 元素值，然后将这些乘积相加。如图 7.1 所示，y[2] 的计算如下：
+
+$$ y[2] = f[0]*x[0] + f[1]*x[1] + f[2]*x[2] + f[3]*x[3] + f[4]*x[4] = 1*8 + 3*2 + 5*5 + 3*4 + 1*1 = 52 $$
+
+在图 7.1 中，y[i] 的计算可以看作是 x 子数组（从 x[i - 2] 开始）和 f 数组之间的内积。图 7.2 显示了 y[3] 的计算。该计算比图 7.1 中的计算向右移动了一个 x 元素。也就是说，y[3] 的值是 x[1]（即 x[3 - 2]）到 x[5]（即 x[3 + 2]）的加权和。我们可以将 x[3] 的计算视为如下内积：
+
+$$ y[3] = f[0]*x[1] + f[1]*x[2] + f[2]*x[3] + f[3]*x[4] + f[4]*x[5] = 1*2 + 3*5 + 5*4 + 3*1 + 1*7 = 47 $$
+
+由于卷积是在相邻元素之间定义的，因此在计算接近数组边缘的输出元素时自然会出现边界条件。如图 7.3 所示，当我们计算 y[1] 时，x[1] 左侧只有一个 x 元素。也就是说，根据我们的卷积定义，没有足够的 x 元素来计算 y[1]。处理这种边界条件的典型方法是为这些缺失的 x 元素分配一个默认值。对于大多数应用，默认值是 0，这也是图 7.3 中使用的默认值。例如，在音频信号处理中，我们可以假设录音开始前和结束后信号音量为 0。在这种情况下，y[1] 的计算如下：
+
+$$ y[1] = f[0]*0 + f[1]*x[0] + f[2]*x[1] + f[3]*x[2] + f[4]*x[3] = 1*0 + 3*8 + 5*2 + 3*5 + 1*4 = 53 $$
+
+![image](https://github.com/user-attachments/assets/2b1aa480-be96-4ed6-8de5-be432cc9fc35)
+> 图 7.2 1D 卷积，y[3] 的计算。
+
+图 7.3 中缺失的 x 元素用虚线框表示。显然，y[0] 的计算将涉及两个缺失的 x 元素，在这个示例中，它们都将假设为 0。我们将 y[0] 的计算留作练习。这些缺失的元素在文献中通常被称为虚拟单元。由于在并行计算中使用了块状处理，也存在其他类型的虚拟单元。这些虚拟单元可能对块状处理的有效性和/或效率产生重大影响。我们将很快回到这一点。
+
+![image](https://github.com/user-attachments/assets/fb862803-bc22-46e8-be90-c9b7f44b1af5)
+> 图 7.3 1D 卷积边界条件。
+
+此外，并非所有应用程序都假设虚拟单元包含 0。例如，一些应用程序可能假设虚拟单元包含与边缘上最近有效数据元素相同的值。
+
+对于图像处理和计算机视觉，输入数据通常表示为二维数组，其中像素位于 x 和 y 空间中。因此，图像卷积是二维卷积，如图 7.4 所示。在二维卷积中，滤波器 f 也是一个二维数组。它的 x 和 y 维度确定了加权和计算中要包含的邻居范围。如果我们假设滤波器在 x 维度的大小为 (2r<sub>x</sub> + 1)，在 y 维度的大小为 (2r<sub>y</sub> + 1)，则每个 P 元素的计算可以表示为：
+
+$$ P_{y,x} = \sum^{r_{y}}_{j=-r_{y}} \sum^{r_{x}}_{k=-r_{x}} f_{y+j,x+k} * N_{y,x} $$
+
+![image](https://github.com/user-attachments/assets/35fbfad8-d316-4544-b4b6-5376cfafafe3)
+> 图 7.4 2D 卷积示例。
+
+图 7.4 中我们使用了一个 5 × 5 的滤波器；即 r<sub>y</sub> = 2 和 r<sub>x</sub> = 2。通常，滤波器不一定是正方形数组，但通常是正方形数组。为了生成输出元素，我们取一个子数组，其中心位于输入数组 N 中的相应位置。然后对滤波器数组和图像数组的元素进行成对乘法。对于我们的示例，结果显示为图 7.4 中 N 和 P 下方的 5 × 5 乘积数组。输出元素的值是所有乘积数组元素的总和。
+
+图 7.4 中的示例显示了 P2,2 的计算。为了简洁起见，我们将使用 N<sub>y,x</sub> 来表示 C 数组中的 N[y][x]。由于 N 和 P 很可能是动态分配的数组，我们将在实际代码示例中使用线性化的索引。计算如下：
+
+![image](https://github.com/user-attachments/assets/d24d3677-c3c6-422d-bd60-a3d3a6cac17e)
+
+与 1D 卷积一样，2D 卷积也必须处理边界条件。在 x 和 y 维度的边界下，边界条件变得更加复杂：输出元素的计算可能涉及水平边界、垂直边界或两者的边界条件。图 7.5 说明了涉及两个边界的 P 元素的计算。从图 7.5 可以看出，P1,0 的计算涉及 N 的子数组中的两列缺失和一行缺失。与 1D 卷积一样，不同的应用程序对这些缺失的 N 元素假设不同的默认值。在我们的示例中，我们假设默认值为 0。这些边界条件也会影响块状处理的效率。我们将很快回到这一点。
+
+![image](https://github.com/user-attachments/assets/fc6a882f-f745-4e91-951e-afa3942f5e6e)
+> 图 7.5 2D 卷积的边界条件。
+
+## 7.2 并行卷积：基础算法
+
+由于卷积中所有输出元素的计算都可以并行进行，因此卷积是并行计算的理想用例。根据我们在矩阵乘法中的经验，我们可以快速编写一个简单的并行卷积内核。我们将展示 2D 卷积的代码示例，读者可以将这些代码示例应用于 1D 和 3D 作为练习。此外，为了简化起见，我们假设滤波器是正方形的。
+
+第一步是定义内核的主要输入参数。我们假设 2D 卷积内核接收五个参数：输入数组 N 的指针；滤波器 F 的指针；输出数组 P 的指针；正方形滤波器的半径 r；输入和输出数组的宽度 width；以及输入和输出数组的高度 height。我们有如下设置：
+
+```cuda
+__global__ void convolution_2D_basic_kernel(float *N, float *F, float *P, int r, int width, int height){
+    //内核主体
+}
+```
+
+第二步是确定和实现线程到输出元素的映射。由于输出数组是 2D 的，一种简单而有效的方法是将线程组织成一个 2D 网格，让网格中的每个线程计算一个输出元素。每个块最多可以有 1024 个线程，因此可以计算多达 1024 个输出元素。图 7.6 显示了一个玩具示例，其中输入和输出是 16 × 16 的图像。在这个示例中，我们假设每个线程块被组织成一个 4 × 4 的线程数组：x 维度四个线程，y 维度四个线程。网格在这个示例中被组织成一个 4 × 4 的块数组。线程到输出元素的分配——在这个示例中是输出像素——很简单：每个线程被分配到计算一个输出像素，其 x 和 y 索引与线程的 x 和 y 索引相同。
+
+读者应该注意到，图 7.6 中的并行化安排与第 3 章中的 `ColorToGrayScaleConversion` 示例相同，因此我们可以使用图 7.7 中内核的第 02 和第 03 行的语句，从块索引、块维度和线程索引计算输出元素的索引。例如，块<sub>1, 1</sub> 的线程<sub>1, 1</sub> 映射到输出元素 P[1*4+1][1*4+1]=P[5][5]，在图 7.6 中标记为绿色方块。
+
+![image](https://github.com/user-attachments/assets/e82ae09b-02a0-4f63-94c8-56f38b380232)
+> 图 7.6 2D 卷积的并行化和线程组织。
+
+一旦确定了每个线程的输出元素索引，我们就可以识别计算输出元素所需的输入 N 元素。如图 7.6 所示，由线程<sub>1, 1</sub> 的块<sub>1, 1</sub> 计算的 P[5][5]（绿色方块）将使用 x 索引范围从 `outCol - r=3` 到 `outCol + r=7`，y 索引范围从 `outRow - r=3` 到 `outRow + r=7` 的输入元素。对于所有线程，`outCol - r` 和 `outRow - r` 定义了所需输入元素的补丁的左上角（重阴影方块），因此我们可以使用双重嵌套循环遍历所有这些索引值并执行计算（图 7.7 的第 05-13 行）。
+
+寄存器变量 `Pvalue` 将累积所有中间结果，以节省 DRAM 带宽。内层 for 循环中的 if 语句测试是否任何用于计算的输入 N 元素是 N 数组的左侧、右侧、顶部或底部的虚拟单元。由于我们假设虚拟单元将使用 0 值，我们可以简单地跳过虚拟单元元素及其相应的滤波器元素的乘法和累积。在循环结束后，我们将 `Pvalue` 释放到输出 P 元素中（第 14 行）。
+
+我们对图 7.7 中的内核有两个观察。首先，将会有控制流分歧。计算 P 数组四个边缘附近输出元素的线程将需要处理虚拟单元。如第 7.1 节所示，每个线程将遇到不同数量的虚拟单元。因此它们在 if 语句（第 09 行）中会有不同的决策。计算 P[0][0] 的线程大部分时间将跳过乘法-累积语句，而计算 P[0][1] 的线程将跳过较少的次数，依此类推。控制分歧的成本将取决于输入数组的宽度和高度以及滤波器的半径。对于大型输入数组和小滤波器，控制分歧只会出现在计算小部分输出元素时，这将使控制分歧的影响保持较小。由于卷积通常应用于大图像，我们预计控制分歧的影响从适中到微不足道。
+
+```cuda
+__global__ void convolution_2D_basic_kernel(float *N, float *F, float *P, int r, int width, int height){
+    int outCol = blockIdx.x*blockDim.x + threadIdx.x;
+    int outRow = blockIdx.y*blockDim.y + threadIdx.y;
+    float Pvalue = 0.0f;
+    for(int fRow = 0; fRow < 2*r+1; fRow++){
+        for(int fCol = 0; fCol < 2*r+1; fCol++){
+            int inRow = outRow - r + fRow;
+            int inCol = outCol - r + fCol;
+            if(inRow >= 0 && inRow < height && inCol >= 0 && inCol < width){
+                Pvalue += F[fRow*width + fCol]*N[inRow*width + inCol];
+            }
+        }
+    }
+    P[outRow*width + outCol] = Pvalue;
+}
+```
+> 图 7.7 处理边界条件的 2D 卷积内核。
+
+一个更严重的问题是内存带宽。浮点运算与全局内存访问的比率只有大约 0.25 OP/B（每加载 8 字节执行 2 次操作）。正如我们在矩阵乘法示例中看到的，这个简单的内核预计只能以极低的峰值性能运行。我们将在接下来的两节中讨论减少全局内存访问的两个关键技术。
+
+## 7.3 常量内存和缓存
+
+在卷积中，滤波器数组 F 的使用有三个有趣的属性。首先，F 的大小通常很小；大多数卷积滤波器的半径为 7 或更小。即使在 3D 卷积中，滤波器通常也只包含不超过 7<sup>3</sup> = 343 个元素。第二，F 的内容在卷积内核的执行过程中不会改变。第三，所有线程都访问滤波器元素。更好的是，所有线程以相同的顺序访问 F 元素，从 F[0][0] 开始，通过图 7.7 中的双重嵌套 for 循环逐个元素进行访问。这三个属性使得滤波器非常适合使用常量内存和缓存（图 7.8）。
+
+![image](https://github.com/user-attachments/assets/92b22fe3-630e-440e-ab3c-44552c6369af)
+> 图 7.8 CUDA 内存模型的概述。
+
+如第 5 章“内存架构和数据局部性”（表 5.1）所讨论的，CUDA C 允许程序员声明变量驻留在常量内存中。与全局内存变量类似，常量内存变量对所有线程块都是可见的。主要区别在于，常量内存变量的值在内核执行期间不能被线程修改。此外，常量内存的大小相当小，目前为 64 KB。
+
+要使用常量内存，主机代码需要以与全局内存变量不同的方式分配和复制常量内存变量。我们假设滤波器的半径在编译时常量 `FILTER_RADIUS` 中指定。要在常量内存中声明一个 F 数组，主机代码将其声明为全局变量，如下所示：
+
+```cuda
+#define FILTER_RADIUS 2
+__constant__ float F[2*FILTER_RADIUS+1][2*FILTER_RADIUS+1];
+```
+
+请注意，这是一个全局变量声明，应该在源文件中的任何函数之外。关键字 `__constant__`（两侧各两个下划线）告诉编译器数组 F 应放置在设备常量内存中。
+
+假设主机代码已经在主机内存中分配和初始化了一个名为 `F_h` 的滤波器掩码数组，包含 (`2*FILTER_RADIUS+1)^2` 个元素。`F_h` 的内容可以通过以下方式从主机内存传输到设备常量内存中的 F：
+
+```cuda
+cudaMemcpyToSymbol(F,F_h,(2*FILTER_RADIUS+1)*(2*FILTER_RADIUS+1)*sizeof(float));
+```
+
+请注意，这是一个特殊的内存复制函数，它通知 CUDA 运行时在内核执行期间数据将不会被修改。通常，`cudaMemcpyToSymbol()` 函数的使用方式如下：
+
+```cuda
+cudaMemcpyToSymbol(dest, src, size);
+```
+
+其中 `dest` 是指向常量内存中的目标位置的指针，`src` 是指向主机内存中源数据的指针，`size` 是要复制的字节数。
+
+内核函数访问常量内存变量的方式类似于访问全局变量。因此，它们的指针不需要作为参数传递给内核。我们可以修订内核以使用常量内存，如图 7.9 所示。请注意，内核看起来几乎与图 7.7 中的内核相同。唯一的区别是 F 不再通过传入的指针访问，而是作为全局变量访问。请记住，所有 C 语言的全局变量作用域规则在这里适用。如果主机代码和内核代码在不同的文件中，内核代码文件必须包含相关的外部声明信息，以确保 F 的声明对内核可见。
+
+```cuda
+__global__ void convolution_2D_const_mem_kernel(float *N, float *P, int r, int width, int height){
+    int outCol = blockIdx.x*blockDim.x + threadIdx.x;
+    int outRow = blockIdx.y*blockDim.y + threadIdx.y;
+    float Pvalue = 0.0f;
+    for(int fRow = 0; fRow < 2*r+1; fRow++){
+        for(int fCol = 0; fCol < 2*r+1; fCol++){
+            int inRow = outRow - r + fRow;
+            int inCol = outCol - r + fCol;
+            if(inRow >= 0 && inRow < height && inCol >= 0 && inCol < width){
+                Pvalue += F[fRow][fCol]*N[inRow*width + inCol];
+            }
+        }
+    }
+    P[outRow*width+outCol] = Pvalue;
+}
+```
+> 图 7.9 使用常量内存的 2D 卷积内核。
+
+与全局内存变量一样，常量内存变量也位于 DRAM 中。然而，由于 CUDA 运行时知道常量内存变量在内核执行期间不会被修改，它会指示硬件在内核执行期间积极缓存常量内存变量。为了理解使用常量内存的好处，我们需要首先了解现代处理器内存和缓存层次结构的更多信息。
+
+如第 6 章“性能考虑”所讨论的，DRAM 的长延迟和有限带宽在几乎所有现代处理器中都形成了瓶颈。为了缓解这种内存瓶颈的影响，现代处理器通常使用片上缓存或缓存来减少需要从主内存（DRAM）中访问的变量数量，如图 7.10 所示。
+
+与 CUDA 共享内存或一般的临时存储器不同，缓存对程序是“透明”的。也就是说，要使用 CUDA 共享内存来保存全局变量的值，程序需要将变量声明为 `__shared__` 并显式地将全局内存变量的值复制到共享内存变量中。另一方面，在使用缓存时，程序只需访问原始全局内存变量。处理器硬件会自动保留最近或最常用的变量在缓存中，并记住它们原始的全局内存地址。当一个保留的变量稍后被使用时，硬件将从其地址检测到变量的副本存在于缓存中。然后，变量的值将从缓存中提供，消除了访问 DRAM 的需要。
+
+内存大小和速度之间存在权衡。因此，现代处理器通常采用多个级别的缓存。这些缓存级别的编号约定反映了与处理器的距离。最低级别的缓存，即 L1 缓存，直接附加到处理器核心，如图 7.10 所示。它在延迟和带宽上都接近处理器的速度。然而，L1 缓存较小，通常在 16 到 64 KB 之间。L2 缓存较大，容量范围从几百千字节到少量 MB，但访问可能需要几十个周期。它们通常在多个处理器核心或 CUDA 设备中的流式多处理器（SMs）之间共享，因此访问带宽在 SMs 之间共享。在一些高端处理器中，还有 L3 缓存，其容量可达数百兆字节。
+
+![image](https://github.com/user-attachments/assets/1492ff05-17ec-4d7d-a029-ff6c416c87f9)
+> 图 7.10 现代处理器缓存层次结构的简化视图。
+
+常量内存变量在设计和使用大规模并行处理器中的内存时扮演了一个有趣的角色。由于这些常量内存变量在内核执行期间不会被修改，因此在 SM 中缓存它们时不需要支持线程的写入。支持高吞吐量写入到通用缓存需要复杂的硬件逻辑，并且在芯片面积和功耗方面是昂贵的。由于不需要支持写入，因此可以以高效的方式设计专用缓存，节省芯片面积和功耗。此外，由于常量内存相当小（64 KB），一个小的专用缓存可以非常有效地捕获每个内核重度使用的常量内存变量。这种专用缓存称为现代 GPU 中的常量缓存。因此，当 warp 中的所有线程访问相同的常量内存变量时，如图 7.9 中的 F，其中访问 F 的索引独立于线程索引，常量缓存可以提供大量带宽以满足这些线程的数据需求。此外，由于 F 的大小通常很小，我们可以假设所有 F 元素都可以有效地从常量缓存中访问。
+
+因此，我们可以简单地假设没有 DRAM 带宽用于访问 F 元素。通过使用常量内存和缓存，我们有效地将浮点运算与内存访问的比率提高到约 0.5 OP/B（每 4 字节加载 2 次操作）。
+
+实际上，输入 N 数组元素的访问也可以受益于缓存。我们将在第 7.5 节中回到这一点。
 
