--- a/7_常量内存和缓存介绍.md
+++ b/7_常量内存和缓存介绍.md
@@ -183,3 +183,80 @@ __global__ void convolution_2D_const_mem_kernel(float *N, float *P, int r, int w
 
 实际上，输入 N 数组元素的访问也可以受益于缓存。我们将在第 7.5 节中回到这一点。
 
+## 7.4 使用边界单元的平铺卷积
+
+我们可以通过平铺卷积算法来解决卷积中的内存带宽瓶颈。回顾一下，在平铺算法中，线程协作将输入元素加载到片上内存中，以便后续使用这些元素。我们首先需要确定输入和输出平铺的定义，因为这些定义对于理解算法的设计很重要。我们将处理每个块的输出元素的集合称为输出平铺。回忆一下，图7.6展示了一个使用16个16线程块的16×16二维卷积的玩具示例。在这个示例中，有16个输出平铺。请记住，我们使用每个块16个线程是为了使示例更小。在实际应用中，每个块应该至少有32个线程，即一个warp，通常还会有更多，以实现良好的占用率和数据重用。从现在开始，我们将假设F元素在常量内存中。
+
+我们定义输入平铺为计算输出平铺中的P元素所需的输入N元素的集合。图7.11展示了输入平铺（左侧的阴影区域）与输出平铺（右侧的阴影区域）的对应关系。注意，输入平铺的尺寸需要在每个方向上扩展滤波器的半径（在本例中为2），以确保包含计算输出平铺边缘的P元素所需的所有边界输入元素。这种扩展可能使得输入平铺比输出平铺大得多。
+
+![image](https://github.com/user-attachments/assets/488356de-fabd-4410-afad-67267be9f8f3)
+> 图7.11 二维卷积中的输入平铺与输出平铺。
+
+在这个玩具示例中，每个输出平铺包含4<sup>2</sup>=16个P元素，而每个输入平铺包含(4+4)<sup>2</sup>=8<sup>2</sup>=64个元素。在这种情况下，输入平铺比输出平铺大4<sup>3</sup>倍。然而，这个大的比例是因为我们假设了一个非常小的输出平铺尺寸以便于可视化。在实际应用中，输出平铺的尺寸会大得多，输入平铺尺寸和输出平铺尺寸的比例会更接近1.0。例如，如果输出尺寸是16×16=256，使用相同的5×5滤波器，输入平铺的尺寸将是(16+4)<sup>2</sup>=400。输入平铺尺寸和输出尺寸之间的比例约为1.6。虽然这个比例远小于4，但它表明即使对于实际的输出平铺尺寸，输入平铺的尺寸仍然可以显著大于输出平铺。
+
+在本节中，我们介绍了一类平铺卷积算法，其中块中的所有线程首先协同加载输入平铺到共享内存中，然后通过从共享内存中访问输入元素来计算输出平铺的元素。这种策略对于读者来说应该很熟悉；它类似于第5章《内存架构与数据局部性》中讨论的平铺矩阵乘法算法。主要的区别在于，第5章中的平铺矩阵乘法算法假设输入平铺和输出平铺的尺寸相同，而卷积中的输入平铺比输出平铺大。这种输入平铺尺寸与输出平铺尺寸之间的差异使得平铺卷积内核的设计更加复杂。
+
+有两种简单的线程组织方式来解决输入平铺尺寸和输出平铺尺寸之间的差异。第一种方式是启动线程块，其尺寸与输入平铺的尺寸匹配。这简化了输入平铺的加载，因为每个线程只需要加载一个输入元素。然而，由于块的尺寸大于输出平铺的尺寸，在计算输出元素时需要禁用一些线程，这可能会降低执行资源的利用效率。第二种方法启动的块，其尺寸与输出平铺的尺寸匹配。一方面，这种策略使得输入平铺的加载更加复杂，因为线程需要迭代以确保加载所有输入平铺元素。另一方面，它简化了输出元素的计算，因为块的尺寸与输出平铺相同，在计算输出元素时不需要禁用任何线程。我们将基于第一种线程组织方式来设计一个内核，并将第二种组织方式留作练习。
+
+图7.12展示了基于第一种线程组织方式的内核。每个线程首先计算它负责加载或计算的输入或输出元素的列索引（col）和行索引（row）（第06-07行）。内核分配了一个与输入平铺尺寸相同的共享内存数组`N_s`（第09行），并将输入平铺加载到共享内存数组中（第10-15行）。第10行的条件用于检查每个线程尝试加载的输入平铺元素是否是边界单元。如果是，线程不会执行内存加载，而是将零放入共享内存中。所有线程执行一个屏障同步（第15行），以确保整个输入平铺都已经加载到共享内存中，然后才允许任何线程继续计算输出元素。
+
+```cuda
+#define IN_TILE_DIM 32
+#define OUT_TILE_DIM((IN_TILE_DIM) - 2*(FILTER_RADIUS))
+__constant__ float F_c[2*FILTER_RADIUS+1][2*FILTER_RADIUS+1];
+__global__ void convolution_tiled_2D_const_mem_kernel(float *N, float *P, int width, int height){
+
+    int col = blockIdx.x*OUT_TILE_DIM + threadIdx.x - FILTER_RADIUS;
+    int row = blockIdx.y*OUT_TILE_DIM + threadIdx.y - FILTER_RADIUS;
+    // 加载输入平铺
+    __share__ N_s[IN_TILE_DIM][IN_TILE_DIM];
+    if(row >= 0 && row < height && col >= 0 && col < width){
+        N_s[threadIdx.y][threadIdx.x] = N[row*width + col];
+    }
+    else{
+        N_s[threadIdx.y][threadIdx.x] = 0.0;
+    }
+    __syncthreads();
+    // 计算输出元素
+    int tileCol = threadIdx.x - FILTER_RADIUS;
+    int tileRow = threadIdx.y - FILTER_RADIUS;
+    // 关闭块边缘的线程
+    if(col >= 0 && tileCol < OUT_TILE_DIM && tileRow >= 0 && tileRow < OUT_TILE_DIM){
+        float Pvalue = 0.0f;
+        for(int fRow = 0; fRow < 2*FILTER_RADIUS+1; fRow++){
+            for(int fCol = 0; fCol < 2*FILTER_RADIUS+1; fCol++){
+                Pvalue += F[fRow][fCol]*N_s[tileRow+fRow][tileCol+fCol];
+            }
+        }
+        P[row*width+col] = Pvalue;
+    }
+}
+```
+> 图7.12 使用常量内存的平铺二维卷积内核。
+
+现在所有的输入平铺元素都在`N_s`数组中，每个线程可以使用`N_s`元素计算它们的输出P元素值。请记住，输出平铺比输入平铺小，且块的尺寸与输入平铺的尺寸相同，因此每个块中的线程仅会用于计算输出平铺的部分元素。我们可以通过多种方式选择用于计算的线程。我们使用了一种设计，禁用`FILTER_RADIUS`外层的线程，如图7.13所示。
+
+![image](https://github.com/user-attachments/assets/8cfe96ce-fcbf-4e90-b368-71bcf9ef2023)    
+> 图7.13 展示了如何使用输入平铺元素的线程组织的小示例
+
+图7.13展示了使用3×3滤波器（`FILTER_RADIUS`=1）、8×8输入平铺、8×8块和6×6输出平铺的卷积小示例。图7.13的左侧展示了输入平铺和线程块。由于它们的尺寸相同，它们被重叠在一起。根据我们的设计，我们禁用`FILTER_RADIUS`=1的外层线程。图7.13左侧中心的重线框包含了用于计算输出平铺元素的活跃线程。在这个示例中，活跃线程的`threadIdx.x`和`threadIdx.y`值都从1到6。图7.13还展示了活跃线程到输出平铺元素的映射：活跃线程（`tx`，`ty`）将使用输入平铺元素的补丁（其左上角是输入平铺的元素`(tx - FILTER_RADIUS, ty - FILTER_RADIUS)`）计算输出元素（`tx - FILTER_RADIUS, ty - FILTER_RADIUS`）。这在图7.12的第17-18行中有所反映，其中列索引（`tileCol`）和行索引（`tileRow`）分别被赋值为`threadIdx.x - FILTER_RADIUS`和`threadIdx.y - FILTER_RADIUS`。
+
+在我们的小示例中，图7.13中的线程（1,1）的`tileCol`和`tileRow`分别为0和0。因此，线程（1,1）使用输入平铺左上角为`N_s[0][0]`的3×3补丁计算输出平铺元素（0,0）。图7.12的第24-28行中的`fRow-fCol`循环遍历补丁并生成输出元素。块中的线程（1,1）将遍历左上角为`N_s[0][0]
+
+`的补丁，而线程（5,5）将遍历左上角为`N_s[5][5]`的补丁。
+
+在第06-07行中，`blockIdx.x*OUT_TILE_DIM`和`blockIdx.y*OUT_TILE_DIM`分别是分配给块的输出平铺的水平和垂直P数组索引。如前所述，`threadIdx.x-FILTER_RADIUS`和`threadIdx.y-FILTER_RADIUS`给出了平铺中的偏移量。因此，行变量和列变量提供了分配给每个活跃线程的输出元素的索引。每个线程使用这两个索引在第29行写入输出元素的最终值。
+
+图7.12中的平铺二维卷积内核比图7.9中的基本内核长且复杂得多。我们引入了额外的复杂性，以减少对N元素的DRAM访问次数。目标是提高算术运算与全局内存访问的比率，以便性能不受DRAM带宽的限制或受到较少限制。请回忆一下第7.4节中，图7.9中的内核的算术运算与全局内存访问的比率为0.5 OP/B。现在我们来推导图7.12中的内核的比率。
+
+对于处理数据边缘的平铺的块，处理边界单元的线程不会对这些边界单元执行任何内存访问。这减少了这些块的内存访问次数。我们可以通过列举使用每个边界单元的线程数量来计算减少的内存访问次数。然而，对于大型输入数组，小掩码大小的边界单元的影响将是微不足道的。因此，在计算平铺卷积内核的算术运算与全局内存访问比率时，我们将忽略边界单元的影响，只考虑内部线程块，其中的边界单元不是边界单元。
+
+现在我们计算图7.12中平铺内核的算术运算与全局内存访问比率。每个分配给输出平铺元素的线程对滤波器的每个元素执行一次乘法和一次加法。因此，内部块中的线程总共执行`OUT_TILE_DIM^2*(2*FILTER_RADIUS + 1)^2*2`个算术操作。至于全局内存访问，所有全局内存访问已转移到将N元素加载到共享内存的代码中。每个分配给输入平铺元素的线程加载一个4字节的输入值。因此，每个内部块加载`IN_TILE_DIM^2*4=(OUT_TILE_DIM+2*FILTER_RADIUS)^2*4`字节。因此，平铺内核的算术运算与全局内存访问比率为
+
+$$ \frac{OUT_TILE_DIM^{2} * (2*FILTER_RADIUS + 1)+{2} * 2}{(OUT_TILE_DIM + 2 * FILTER_RADIUS)^{2} * 4} $$
+
+对于我们的示例，使用5×5滤波器和32×32输入平铺（28×28输出平铺），比率为9.57 OP/B。32×32的输入平铺是当前GPU上可实现的最大尺寸。然而，我们可以对平铺尺寸进行渐近分析，以获得此计算的算术运算与全局内存访问比率的上限。如果`OUT_TILE_DIM`远大于`FILTER_RADIUS`，我们可以认为`OUT_TILE_DIM+2*FILTER_RADIUS`大致为`OUT_TILE_DIM`。这简化了表达式为`(2*FILTER_RADIUS+1)^2*2/4`。这个结果应该很直观。在原始算法中，每个N元素被大约（2×FILTER_RADIUS+1）<sup>2</sup>线程冗余加载，每个线程对其执行两次算术操作。因此，如果平铺尺寸是无限大的，并且每个4字节的元素仅加载一次到共享内存中，则比率应该是`(2*FILTER_RADIUS+1)^2*2/4`。
+
+图7.14展示了不同滤波器尺寸下平铺卷积内核的算术运算与全局内存访问比率如何随平铺尺寸变化，包括渐近界限。5×5滤波器的比率上限是12.5 OP/B。然而，实际在32×32线程块大小限制下实现的比率是9.57 OP/B。对于更大的滤波器，例如图7.14底行中的9×9，比例上限是40.5 OP/B。然而，实际在32×32线程块大小限制下实现的比率是22.78 OP/B。因此，我们观察到较大的滤波器尺寸具有更高的比率，因为每个输入元素被更多的线程使用。然而，较大的滤波器尺寸也有更高的界限和实际实现之间的差距，因为更多的边界元素迫使输出平铺更小。
+
+读者在使用小的块和平铺尺寸时应始终小心。它们可能导致内存访问减少的程度远低于预期。例如，在图7.14中，8×8块（输入平铺）在5×5滤波器下的比率仅为3.13 OP/B。在实践中，由于片上内存不足，特别是在3D卷积中，所需的片上内存随着平铺尺寸的增加而迅速增长，因此通常使用较小的平铺尺寸。
