--- a/7_常量内存和缓存介绍.md
+++ b/7_常量内存和缓存介绍.md
@@ -251,11 +251,11 @@ __global__ void convolution_tiled_2D_const_mem_kernel(float *N, float *P, int wi
 
 对于处理数据边缘的平铺的块，处理边界单元的线程不会对这些边界单元执行任何内存访问。这减少了这些块的内存访问次数。我们可以通过列举使用每个边界单元的线程数量来计算减少的内存访问次数。然而，对于大型输入数组，小掩码大小的边界单元的影响将是微不足道的。因此，在计算平铺卷积内核的算术运算与全局内存访问比率时，我们将忽略边界单元的影响，只考虑内部线程块，其中的边界单元不是边界单元。
 
-现在我们计算图7.12中平铺内核的算术运算与全局内存访问比率。每个分配给输出平铺元素的线程对滤波器的每个元素执行一次乘法和一次加法。因此，内部块中的线程总共执行`OUT_TILE_DIM^2*(2*FILTER_RADIUS + 1)^2*2`个算术操作。至于全局内存访问，所有全局内存访问已转移到将N元素加载到共享内存的代码中。每个分配给输入平铺元素的线程加载一个4字节的输入值。因此，每个内部块加载`IN_TILE_DIM^2*4=(OUT_TILE_DIM+2*FILTER_RADIUS)^2*4`字节。因此，平铺内核的算术运算与全局内存访问比率为
+现在我们计算图7.12中平铺内核的算术运算与全局内存访问比率。每个分配给输出平铺元素的线程对滤波器的每个元素执行一次乘法和一次加法。因此，内部块中的线程总共执行`OUT_TILE_DIM`^2*(2*`FILTER_RADIUS` + 1)^2*2个算术操作。至于全局内存访问，所有全局内存访问已转移到将N元素加载到共享内存的代码中。每个分配给输入平铺元素的线程加载一个4字节的输入值。因此，每个内部块加载`IN_TILE_DIM^2*4=(OUT_TILE_DIM+2*FILTER_RADIUS)^2*4`字节。因此，平铺内核的算术运算与全局内存访问比率为
 
 $$ \frac{OUT_TILE_DIM^{2} * (2*FILTER_RADIUS + 1)+{2} * 2}{(OUT_TILE_DIM + 2 * FILTER_RADIUS)^{2} * 4} $$
 
-对于我们的示例，使用5×5滤波器和32×32输入平铺（28×28输出平铺），比率为9.57 OP/B。32×32的输入平铺是当前GPU上可实现的最大尺寸。然而，我们可以对平铺尺寸进行渐近分析，以获得此计算的算术运算与全局内存访问比率的上限。如果`OUT_TILE_DIM`远大于`FILTER_RADIUS`，我们可以认为`OUT_TILE_DIM+2*FILTER_RADIUS`大致为`OUT_TILE_DIM`。这简化了表达式为`(2*FILTER_RADIUS+1)^2*2/4`。这个结果应该很直观。在原始算法中，每个N元素被大约（2×FILTER_RADIUS+1）<sup>2</sup>线程冗余加载，每个线程对其执行两次算术操作。因此，如果平铺尺寸是无限大的，并且每个4字节的元素仅加载一次到共享内存中，则比率应该是`(2*FILTER_RADIUS+1)^2*2/4`。
+对于我们的示例，使用5×5滤波器和32×32输入平铺（28×28输出平铺），比率为9.57 OP/B。32×32的输入平铺是当前GPU上可实现的最大尺寸。然而，我们可以对平铺尺寸进行渐近分析，以获得此计算的算术运算与全局内存访问比率的上限。如果`OUT_TILE_DIM`远大于`FILTER_RADIUS`，我们可以认为`OUT_TILE_DIM+2*FILTER_RADIUS`大致为`OUT_TILE_DIM`。这简化了表达式为(2*`FILTER_RADIUS`+1)^2*2/4。这个结果应该很直观。在原始算法中，每个N元素被大约(2×`FILTER_RADIUS`+1)<sup>2</sup>线程冗余加载，每个线程对其执行两次算术操作。因此，如果平铺尺寸是无限大的，并且每个4字节的元素仅加载一次到共享内存中，则比率应该是(2*`FILTER_RADIUS`+1)^2*2/4。
 
 图7.14展示了不同滤波器尺寸下平铺卷积内核的算术运算与全局内存访问比率如何随平铺尺寸变化，包括渐近界限。5×5滤波器的比率上限是12.5 OP/B。然而，实际在32×32线程块大小限制下实现的比率是9.57 OP/B。对于更大的滤波器，例如图7.14底行中的9×9，比例上限是40.5 OP/B。然而，实际在32×32线程块大小限制下实现的比率是22.78 OP/B。因此，我们观察到较大的滤波器尺寸具有更高的比率，因为每个输入元素被更多的线程使用。然而，较大的滤波器尺寸也有更高的界限和实际实现之间的差距，因为更多的边界元素迫使输出平铺更小。
 
