--- a/7_常量内存和缓存介绍.md
+++ b/7_常量内存和缓存介绍.md
@@ -241,9 +241,7 @@ __global__ void convolution_tiled_2D_const_mem_kernel(float *N, float *P, int wi
 
 图7.13展示了使用3×3滤波器（`FILTER_RADIUS`=1）、8×8输入平铺、8×8块和6×6输出平铺的卷积小示例。图7.13的左侧展示了输入平铺和线程块。由于它们的尺寸相同，它们被重叠在一起。根据我们的设计，我们禁用`FILTER_RADIUS`=1的外层线程。图7.13左侧中心的重线框包含了用于计算输出平铺元素的活跃线程。在这个示例中，活跃线程的`threadIdx.x`和`threadIdx.y`值都从1到6。图7.13还展示了活跃线程到输出平铺元素的映射：活跃线程（`tx`，`ty`）将使用输入平铺元素的补丁（其左上角是输入平铺的元素`(tx - FILTER_RADIUS, ty - FILTER_RADIUS)`）计算输出元素（`tx - FILTER_RADIUS, ty - FILTER_RADIUS`）。这在图7.12的第17-18行中有所反映，其中列索引（`tileCol`）和行索引（`tileRow`）分别被赋值为`threadIdx.x - FILTER_RADIUS`和`threadIdx.y - FILTER_RADIUS`。
 
-在我们的小示例中，图7.13中的线程（1,1）的`tileCol`和`tileRow`分别为0和0。因此，线程（1,1）使用输入平铺左上角为`N_s[0][0]`的3×3补丁计算输出平铺元素（0,0）。图7.12的第24-28行中的`fRow-fCol`循环遍历补丁并生成输出元素。块中的线程（1,1）将遍历左上角为`N_s[0][0]
-
-`的补丁，而线程（5,5）将遍历左上角为`N_s[5][5]`的补丁。
+在我们的小示例中，图7.13中的线程（1,1）的`tileCol`和`tileRow`分别为0和0。因此，线程（1,1）使用输入平铺左上角为`N_s[0][0]`的3×3补丁计算输出平铺元素（0,0）。图7.12的第24-28行中的`fRow-fCol`循环遍历补丁并生成输出元素。块中的线程（1,1）将遍历左上角为`N_s[0][0]`的补丁，而线程（5,5）将遍历左上角为`N_s[5][5]`的补丁。
 
 在第06-07行中，`blockIdx.x*OUT_TILE_DIM`和`blockIdx.y*OUT_TILE_DIM`分别是分配给块的输出平铺的水平和垂直P数组索引。如前所述，`threadIdx.x-FILTER_RADIUS`和`threadIdx.y-FILTER_RADIUS`给出了平铺中的偏移量。因此，行变量和列变量提供了分配给每个活跃线程的输出元素的索引。每个线程使用这两个索引在第29行写入输出元素的最终值。
 
@@ -260,3 +258,105 @@ $$ \frac{OUT_TILE_DIM^{2} * (2*FILTER_RADIUS + 1)+{2} * 2}{(OUT_TILE_DIM + 2 * F
 图7.14展示了不同滤波器尺寸下平铺卷积内核的算术运算与全局内存访问比率如何随平铺尺寸变化，包括渐近界限。5×5滤波器的比率上限是12.5 OP/B。然而，实际在32×32线程块大小限制下实现的比率是9.57 OP/B。对于更大的滤波器，例如图7.14底行中的9×9，比例上限是40.5 OP/B。然而，实际在32×32线程块大小限制下实现的比率是22.78 OP/B。因此，我们观察到较大的滤波器尺寸具有更高的比率，因为每个输入元素被更多的线程使用。然而，较大的滤波器尺寸也有更高的界限和实际实现之间的差距，因为更多的边界元素迫使输出平铺更小。
 
 读者在使用小的块和平铺尺寸时应始终小心。它们可能导致内存访问减少的程度远低于预期。例如，在图7.14中，8×8块（输入平铺）在5×5滤波器下的比率仅为3.13 OP/B。在实践中，由于片上内存不足，特别是在3D卷积中，所需的片上内存随着平铺尺寸的增加而迅速增长，因此通常使用较小的平铺尺寸。
+
+![image](https://github.com/user-attachments/assets/bc0156c0-f184-4b4f-9222-ce474b512c68)
+> 图7.14
+
+## 7.5 使用缓存处理边界单元的平铺卷积
+
+在图7.12中，代码的复杂性很大程度上与输入平铺和块的尺寸大于输出平铺的事实有关，因为需要加载边界单元。回顾一下，块的输入平铺的边界单元也是相邻平铺的内部元素。例如，在图7.11中，输入平铺的浅灰色边界单元也是相邻块的输入平铺的内部元素。由于块在需要其边界单元时，这些边界单元很可能已经由于相邻块的访问而存在于L2缓存中。因此，对这些边界单元的内存访问可能自然地从L2缓存中服务，而不会导致额外的DRAM流量。也就是说，我们可以保留对这些边界单元的原始N元素的访问，而不是将它们加载到`N_ds`中。我们现在介绍一种使用相同维度的输入和平铺的平铺卷积算法，只加载每个平铺的内部元素到共享内存中。
+
+图7.15展示了一个使用缓存处理边界单元的二维卷积内核。在这个平铺内核中，共享内存`N_ds`数组只需要保存平铺的内部元素。因此，输入平铺和输出平铺的尺寸是相同的，这被定义为常量`TILE_DIM`（第1行）。通过这种简化，`N_s`被声明为在x和y维度上都有TILE_DIM个元素（第6行）。
+
+```cuda
+#define TILE_DIM 32
+__constant__ float F_c[2*FILTER_RADIUS+1][2*FILTER_RADIUS+1];
+__global__ void convolution_cache_tiled_2D_const_mem_kernel(float *N, float *P, int width, int height){
+    int col = blockIdx.x*TILE_DIM + threadIdx.x;
+    int row = blockIdx.y*TILE_DIM + threadIdx.y;
+    // 加载输入平铺
+    __shared__ float N_s[TILE_DIM][TILE_DIM];
+    if(row < height && col < width){
+        N_s[threadIdx.y][threadIdx.x] = N[row*width + col];
+    }
+    else{
+        N_s[threadIdx.y][threadIdx.x] = 0.0;
+    }
+    __syncthreads();
+    // 计算输出元素
+    // 关闭块边缘的线程
+    if(col < width && row < height){
+        float Pvalue = 0.0f;
+        for(int fRow = 0; fRow < 2*FILTER_RADIUS+1; fRow++){
+            for(int fCol = 0; fCol < 2*FILTER_RADIUS+1; fCol++){
+                if(threadIdx.x - FILTER_RADIUS + fCol >= 0 &&
+                   threadIdx.x - FILTER_RADIUS + fCol < TILE_DIM &&
+                   threadIdx.y - FILTER_RADIUS + fRow >= 0 &&
+                   threadIdx.y - FILTER_RADIUS + fRow < TILE_DIM
+                ){
+                    Pvalue += F_c[fRow][fCol] * N_s[threadIdx.y - FILTER_RADIUS + fRow][threadIdx.x - FILTER_RADIUS + fCol];
+                }
+                else{
+                    if(row - FILTER_RADIUS + fRow >= 0 &&
+                       row - FILTER_RADIUS + fRow < height &&
+                       col - FILTER_RADIUS + fCol >= 0 &&
+                       col - FILTER_RADIUS + fCol < width
+                    ){
+                        Pvalue += F_c[fRow][fCol] * N[(row - FILTER_RADIUS + fRow) * width + (col - FILTER_RADIUS + fCol)];
+                    }
+                }
+            }
+        }
+        P[row * width + col] = Pvalue;
+    }
+}
+```
+> 图7.15 使用缓存处理边界单元的平铺二维卷积内核，并使用常量内存存储F。
+
+由于输入平铺和输出平铺的尺寸相同，线程块可以使用相同的尺寸进行启动。因此，`N_s`元素的加载变得更简单，因为每个线程可以直接加载与其分配的输出元素具有相同x和y坐标的输入元素（第4-5行和第7-11行）。加载输入元素的条件也简化为第7行：
+由于内核不再将边界单元加载到共享内存中，因此不再存在加载鬼影单元的危险。因此，条件只需检查平铺是否超出了输入数据的有效范围。
+
+然而，计算P元素的循环体变得更复杂。它需要添加条件来检查是否使用了边界单元和鬼影单元。边界单元的处理是通过第17-20行的条件完成的，这些条件测试输入元素是否落在输入平铺的内部。如果是，该元素从共享内存中访问。如果不是，第24-27行的条件检查这些边界单元是否是鬼影单元。如果是，则不对该元素采取任何操作，因为我们假设鬼影值为0。否则，该元素从全局内存中访问。读者应验证处理鬼影单元的条件类似于图7.7中使用的条件。
+
+图7.15中的内核相比于图7.12中的内核的一个微妙优势是，它的块大小、输入平铺大小和输出平铺大小可以相同且可以是2的幂。由于图7.12中的内核输入平铺大小和输出平铺大小不同，因此在该内核的执行过程中可能会有更多的内存分歧和控制分歧。
+
+## 7.6 总结
+
+在本章中，我们研究了卷积作为一个重要的并行计算模式。虽然卷积用于许多应用，如计算机视觉和视频处理，但它也代表了许多并行算法的基础模式。例如，可以将部分微分方程求解中的模板算法视为卷积的一个特例；这将在第8章“模板”中讨论。另一个例子是计算网格点的力或势值也可以视为卷积的一个特例，这将在第17章“迭代磁共振成像重建”中介绍。
+
+我们还将在第16章“深度学习”中应用本章中学到的许多卷积神经网络知识。我们展示了一个基本的并行卷积算法，其实现将受到DRAM带宽的限制，以访问输入和滤波器元素。接着，我们介绍了常量内存和对内核及主机代码的简单修改，以利用常量缓存并消除几乎所有的DRAM访问操作。我们进一步介绍了一种平铺并行卷积算法，它通过利用共享内存来减少DRAM带宽消耗，但引入了更多的控制流分歧和编程复杂性。最后，我们展示了一种利用L1和L2缓存处理边界单元的平铺并行卷积算法。
+
+我们分析了平铺的好处，即提升的算术运算与全局内存访问比率。这个分析是一项重要技能，对于理解其他模式中平铺的好处也很有用。通过分析，我们可以了解到小平铺尺寸的限制，这在大滤波器和3D卷积中尤为明显。
+
+虽然我们只展示了1D和2D卷积的内核示例，但这些技术同样适用于3D卷积。一般来说，由于维度更高，输入和输出数组的索引计算会更复杂。此外，由于需要遍历多个维度以加载平铺和/或计算输出值，每个线程将有更多的循环嵌套。我们鼓励读者将这些高维内核作为家庭作业练习完成。
+
+## 习题
+
+1. 计算图7.3中P[0]的值。
+2. 考虑对数组N = {4, 1, 3, 2, 3}进行1D卷积，滤波器F = {2, 1, 4}。结果输出数组是什么？
+3. 你认为以下1D卷积滤波器在做什么？
+   a. [0 1 0]
+   b. [0 0 1]
+   c. [1 0 0]
+   d. [2/1 0 1/2]
+   e. [1/3 1/3 1/3]
+4. 考虑对大小为N的数组进行1D卷积，滤波器大小为M：
+   a. 总共有多少个鬼影单元？
+   b. 如果鬼影单元被视为乘法（乘以0），则执行了多少次乘法？
+   c. 如果鬼影单元不被视为乘法，则执行了多少次乘法？
+5. 考虑对大小为N × N的方形矩阵进行2D卷积，滤波器大小为M × M：
+   a. 总共有多少个鬼影单元？
+   b. 如果鬼影单元被视为乘法（乘以0），则执行了多少次乘法？
+   c. 如果鬼影单元不被视为乘法，则执行了多少次乘法？
+6. 考虑对大小为N<sub>1</sub> × N<sub>2</sub>的矩形矩阵进行2D卷积，滤波器大小为M<sub>1</sub> × M<sub>2</sub>：
+   a. 总共有多少个鬼影单元？
+   b. 如果鬼影单元被视为乘法（乘以0），则执行了多少次乘法？
+   c. 如果鬼影单元不被视为乘法，则执行了多少次乘法？
+7. 考虑对大小为N × N的数组使用图7.12中显示的内核进行2D平铺卷积，滤波器大小为M × M，输出平铺大小为T × T：
+   a. 需要多少个线程块？
+   b. 每个块需要多少个线程？
+   c. 每个块需要多少共享内存？
+   d. 如果使用图7.15中的内核，重复相同的问题。
+8. 修改图7.7中的2D内核以执行3D卷积。
+9. 修改图7.9中的2D内核以执行3D卷积。
+10. 修改图7.12中的平铺2D内核以执行3D卷积。
