--- a/1_介绍并行运算.md
+++ b/1_介绍并行运算.md
@@ -177,3 +177,8 @@
 
 |[top](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#%E7%AC%AC%E4%B8%80%E7%AB%A0-%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97)|
 |-|
+
+
+[上一章 序](https://github.com/tunglinwood/CUDA/blob/main/0_%E5%BA%8F.md)
+
+[下一章 第二章 异构数据并行计算](https://github.com/tunglinwood/CUDA/blob/main/2_%E5%BC%82%E6%9E%84%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97.md)
